# some-error

./: Cargo.toml  README.md
some-error/: Cargo.toml
some-error-test/: Cargo.toml
some-error-test/src/: main.rs
some-error/src/: lib.rs
